[tool.poetry]
name = "buttercup"
version = "0.1.0"
description = "The Discord Bot!"
authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]

[tool.poetry.dependencies]
"discord.py" = "^1.7.2"
discord-py-slash-command = "^1.2.2"
python = "^3.8"
toml = "^0.10.1"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
requests = "^2.25.1"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"
asyncpraw = "^7.2.0"
matplotlib = "^3.4.2"
pandas = "^1.2.5"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
black = "^19.10b0"
flake8 = { version = "^3.7.9", allow-prereleases = true }
flake8-annotations = "^2.0.1"
flake8-black = "^0.1.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-variables-names = "^0.0.3"
pep8-naming = "^0.9.1"
pre-commit = "^2.4.0"
seed-isort-config = "^2.1.1"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
