[tool.poetry]
name = "buttercup"
version = "0.24.0"
description = "The Discord Bot!"
authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]
exclude = ['test', 'test.*', '*.test.*', '*.test']

[tool.poetry.dependencies]
"discord.py" = "^1.7.3"
discord-py-slash-command = "^3.0.3"
python = ">=3.10,<3.12"
toml = "^0.10.1"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
requests = "^2.25.1"
PyYAML = "^6.0"
python-dateutil = "^2.8.1"
asyncpraw = "^7.2.0"
matplotlib = "^3.4.2"
pandas = "^1.2.5"
seaborn = "^0.11.1"
shiv = "^1.0.1"
click = "^8.1.3"
pytest = "^7.1.2"
scipy = "^1.10.1"
ruff = "^0.0.267"

[tool.poetry.group.dev.dependencies]
better-exceptions = "^0.3.3"
black = "^22.6.0"
pre-commit = "^2.4.0"
pytest-cov = "^3.0.0"
coveralls = "^3.2.0"
poetry = "^1.1.14"
poetry2setup = "^1.0.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_first_party = "src"
known_third_party = ["asyncpraw", "asyncprawcore", "blossom_wrapper", "click", "dateutil", "discord", "discord_slash", "matplotlib", "pandas", "pytest", "pytz", "requests", "seaborn", "shiv", "toml", "yaml"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."console_scripts"]
"buttercup" = "buttercup.main:main"
